# email-spam-detection

./: README.md  main.py  preprocess.py  pyproject.toml
NOTEBOOKS/: bert_finetune_final.ipynb  bert_finetune_lora.ipynb  fasttext_final.ipynb  max_entropy_final.ipynb  preprocess_final.ipynb  tfidf_final.ipynb  word2vec_final.ipynb
